--- a/client/src/index.html
+++ b/client/src/index.html
@@ -14,27 +14,7 @@
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header page-scroll">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-        <a class="navbar-brand page-scroll" href="#">Yo! chatapp</a>
-      </div>
 
-      <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="#home">Home</a>
-          </li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
   </nav>
 
   <!-- App Section -->
@@ -47,6 +27,9 @@
       </div>
     </div>
   </section>
+
+  <!-- app modal -->
+  <section class="app-modal"></section>
 
   <!-- main bundled file -->
   <script src="/app.bundle.js"></script>
